【部署】自托管运行器-3

--- a/.env
+++ b/.env
@@ -39,7 +39,7 @@
 
 # staging environment
 ENVIRONMENT=staging
-DOMAIN=visage.com
+DOMAIN=visage126.com
 PROJECT_NAME="Full Stack FastAPI Project"
 STACK_NAME=full-stack-fastapi-project
 FRONTEND_HOST=http://localhost:5173
