【部署】停止运行test-docker-compose，修改SECRET_KEY

--- a/.env
+++ b/.env
@@ -47,7 +47,7 @@ FRONTEND_HOST=http://localhost:5173
 
 # Backend
 BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,https://localhost,https://localhost:5173,https://dashboard.visage126.com,http://dashboard.visage126.com"
-SECRET_KEY=changethis
+SECRET_KEY=hg6F8xyxQaL6FTWaARse2iOll9PIBrPVfPDADbep1cQ
 FIRST_SUPERUSER=admin@example.com
 FIRST_SUPERUSER_PASSWORD=zxj201328
 
