--- a/.github/workflows/test-backend.yml
+++ b/.github/workflows/test-backend.yml
@@ -26,6 +26,7 @@ jobs:
           enable-cache: true
       - run: echo "${{ secrets.DOCKER_REPOSITORY_PASSWORD }}" | docker login --username=${{ secrets.DOCKER_REPOSITORY_USERNAME }} --password-stdin ${{ secrets.DOCKER_REPOSITORY_DOMAIN }}
       - run: docker compose down -v --remove-orphans
+      # 在 Docker Compose 环境中启动两个服务：db 和 mailcatcher
       - run: docker compose up -d db mailcatcher
       - name: Migrate DB
         run: uv run bash scripts/prestart.sh
